fix(spacing): updates vertical rythm and adds spacing docs (#93)
* docs: adds spacing foundations

* Update _typography.scss

--- a/packages/core/src/global/_typography.scss
+++ b/packages/core/src/global/_typography.scss
@@ -3,7 +3,7 @@
 @mixin ray-display-1 {
   font-size: 4rem;
   font-weight: 600;
-  line-height: 5.5rem;
+  line-height: 5rem;
   margin: 0 0 2rem;
 }
 
@@ -18,14 +18,14 @@
   font-size: 2.5rem;
   font-weight: 600;
   line-height: 3.5rem;
-  margin: 0 0 1.5rem;
+  margin: 0 0 1rem;
 }
 
 @mixin ray-h2 {
   font-size: 2rem;
   font-weight: 600;
   line-height: 2.75rem;
-  margin: 0 0 1.5rem;
+  margin: 0 0 1rem;
 }
 
 @mixin ray-h3 {
