--- a/packages/docs-app/src/styles/_page.scss
+++ b/packages/docs-app/src/styles/_page.scss
@@ -30,7 +30,7 @@ button,
     > h4,
     > h5,
     > h6 {
-      margin: 3rem 0 1rem;
+      margin-top: 4rem;
     }
   }
 
